[package]
name = "icc_auto_reloader"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Power",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_UI_Controls", 
    "Win32_System_Com",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_System_ProcessStatus",
] }

[build-dependencies]
winres = "0.1"