[package]
name = "icc_auto_reloader"
version = "0.1.0"
edition = "2021"

[dependencies]
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Power",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_UI_Controls",
    "Win32_System_Com",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_System_ProcessStatus",
    "Win32_UI_HiDpi",
    "Win32_System_Memory",
] }

[build-dependencies]
winres = "0.1"
